--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="row">
       <div *ngFor="let book of cart" class="col-md-4 mb-3">
-        <div class="card" style="width: 100%;">
+        <div class="card clickable-card" style="width: 100%;" (click)="viewProductDetails(book.id)">
           <!-- Display item summaries here -->
           <div class="row no-gutters">
             <div class="col-md-4">
