--- a/src/app/checkout/checkout.component.css
+++ b/src/app/checkout/checkout.component.css
@@ -5,3 +5,11 @@
 .rounded-corners {
   border-radius: 50px;
 }
+
+.clickable-card {
+  cursor: pointer;
+}
+
+.card:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
