--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -16,7 +16,7 @@
     <div class="col-md-8 product-info">
       <h2>{{ product.title }}</h2>
       <p>Author: {{ product.author }}</p>
-      <p>Price: ${{ product.price }}</p>
+      <p>Price:  &nbsp;<strong>${{ product.price }}</strong></p>
       <div class="mb-3">
         <strong>Description:</strong>
         <p>{{ product.description }}</p>
@@ -25,7 +25,7 @@
       <div *ngIf="showMessage" class="alert alert-success">
         {{ message }}
       </div>
-      <a class="btn btn-sm a-button-add rounded-corners" (click)="addToCart(product)" *ngIf="product.inCart < 1">Add to Cart</a>
+      <a class="btn btn-md a-button-add rounded-corners" (click)="addToCart(product)" *ngIf="product.inCart < 1" style="border-radius: 10px;">Add to Cart</a>
       <span *ngIf="product.inCart>0">
           <button class="btn btn-sm btn-danger a-button-remove rounded-corners"
               (click)="removeFromCart(product); $event.stopPropagation();">
@@ -35,8 +35,9 @@
           <button class="btn btn-sm btn-success a-button-add-quantity rounded-corners" (click)="increaseQuantity(product); $event.stopPropagation();">
               <strong style="font-size: 13px;">+</strong>
           </button>
-      </span>&nbsp;
-      <button (click)="buyNow(product)" class="btn btn-sm a-button-details rounded-corners">Buy Now</button> 
+      </span>
+      &nbsp;
+    <button (click)="buyNow(product)" class="btn btn-md a-button-details rounded-corners"  style="border-radius: 10px;">Buy Now</button> 
     </div>
     </div>
   </div>
