--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -10,7 +10,7 @@
     </div>
 </div>
   <div class="row">
-    <div class="col-md-4 product-image pad" style="width: 16rem;">
+    <div class="col-md-4 product-image " style="width: 16rem;">
       <img src="assets/book1.jpg" alt="{{ product.title }}" class="img-fluid" />
     </div>
     <div class="col-md-8 product-info">
