--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -68,17 +68,20 @@
           </div>
         </div>
       </div>
+              <!-- Total Price -->
+        <div class="d-flex justify-content-end " style="padding-top:6%">
+          <p>Total Price: <strong> {{ totalPrice | currency }}</strong></p>
+        </div>
+        <!-- Checkout Button -->
+        <div class="mt-3 d-flex d-flex justify-content-end" *ngIf="selectedBooks.length == 0">
+          <button class="btn a-button-add" (click)="checkout()" [disabled]="cart.length == 0">Proceed to Checkout</button>
+        </div>
+
     </div>
   </ng-container>
 
-<!-- Total Price -->
-<div class="d-flex justify-content-center">
-  <strong>Total Price: {{ totalPrice | currency }}</strong>
-</div>
-  <!-- Checkout Button -->
-  <div class="mt-3 d-flex d-flex justify-content-center" *ngIf="selectedBooks.length == 0">
-    <button class="btn a-button-add" (click)="checkout()" [disabled]="cart.length == 0">Proceed to Checkout</button>
-  </div>
+
+ 
 
   <!-- No Items Message -->
   <ng-template #noItems>
