--- a/src/app/req-book/req-book.component.html
+++ b/src/app/req-book/req-book.component.html
@@ -42,7 +42,7 @@
                 required</span> <br>
         </div>
         <div>
-            <button [disabled]="reqBook.invalid" class="btn btn-warning" type="submit">Request Book</button>
+            <button [disabled]="reqBook.invalid" class="btn a-button-submit btn-submita" type="submit">Request Book</button>
         </div>
     </form>
     <div *ngIf="message" class="alert alert-success alert-dismissible fade show" role="alert">
