--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-medium-slate-blue fixed-top">
     <div class="logo">
-        <a routerLink="/home" class="navbar-brand">Online Book Store</a>
+        <a routerLink="/home" class="navbar-brand">
+            <img src="assets/logo.png" alt="Online Book Store" class="img-fluid" style="max-height: 30px; max-width: 100%;" />
+        </a>
     </div>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
