--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -20,7 +20,7 @@
           <!-- Display item summaries here -->
           <div class="row no-gutters">
             <div class="col-md-4">
-              <img src="assets/book1.jpg" alt="Book Cover" height="400%" class="img-thumbnail">
+              <img [src]="book.image" alt="Book Cover" height="400%" class="img-thumbnail">
             </div>
             <div class="col-md-8">
               <div class="card-body">
