--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -11,7 +11,7 @@
 </div>
   <div class="row">
     <div class="col-md-4 product-image pad" style="width: 16rem;">
-      <img [src]="product.image" alt="{{ product.title }}" class="img-fluid" />
+      <img [src]="product.image" alt="{{ product.title }}" class="img-fluid" ngxImageZoom/>
     </div>
     <div class="col-md-8 product-info">
       <h4>{{ product.title }}</h4>
