--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -31,15 +31,15 @@
       <div class="alert alert-info"> Note: Use checkboxes to remove multiple books. </div>
       <div *ngFor="let book of cart" class="card mt-3" [ngClass]="{'border-danger': book.selected}">
         <div class="row no-gutters">
-          <div class="col-md-4">
-            <div class="d-flex align-items-center">
+          <div class="col-md-2">
+            <div class="d-flex align-items-center mt-2">
               <div class="px-4">
                 <input type="checkbox" [(ngModel)]="book.selected" (click)="selectItem(book)">
               </div>
-              <img [src]="book.image" alt="Book Cover" width="35%" class="clickable-card img-thumbnail" (click)="viewProductDetails(book.id)">
+              <img [src]="book.image" alt="Book Cover" width="60%" class="clickable-card img-thumbnail" (click)="viewProductDetails(book.id)">
             </div>
           </div>
-          <div class="col-md-8">
+          <div class="col-md-10">
             <div class="card-body">
               <h5 class="card-title">{{ book.title }}</h5>
               <p class="card-text" style="color: gray;">Author: {{ book.author }}</p>
